$Id: NEWS,v 1.709 2005-11-04 16:34:12 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- Bug 2703 - Disk quota exceeded for small files not being triggered.

1.3.0rc3 - Released 31-Oct-2005
--------------------------------
- Bug 2660 - Add mod_facl in rpm spec file.
- Bug 2662 - OpenSolaris/Solaris 11 has TCP_CORK but not SOL_TCP.
- Bug 2667 - mod_tls handles SIGHUP badly.
- Bug 2668 - mod_ctrls fails to open socket during SIGHUP.
- Bug 2669 - mod_radius segfaults if PASS command sent with no USER command.
- Bug 2674 - mod_sql string escape problem during group lookups.
- Bug 2676 - configure option --disable-ipv6 enables IPv6.
- Bug 2685 - ListOptions' max parameters cannot be set higher than 255.
- Bug 2689 - Parser does not complain about unclosed configuration sections.
- Bug 2695 - Client IP/host is not logged when client exits.
- Bug 2697 - Improper SSL session shutdown sequence used for some FTPS clients.
- Bug 2682 - Signals can interrupt privilege switching.
- Bug 2692 - R_DUP response messages can break the FTP protocol responses.

1.3.0rc2 - Released 24-Jul-2005
--------------------------------
- Bug 2584 - mod_sql_postgres missing end-of-comment character.
- Bug 2587 - HideNoAccess does not work for DefaultRoot/<Anonymous> logins.
- Bug 2590 - AIX uses unsigned int for ULONG_MAX, causing printf format warning.
- Bug 2591 - wrong argument type in call to pr_log_debug in mod_delay.c on AIX.
- Bug 2593 - `make install-modules' does not honour DESTDIR enviroment variable.
- Bug 2596 - STAT command can cause segfault.
- Bug 2588 - AIX requires _USE_IRS #define to use hstrerror().