@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.709 2005-11-04 16:34:12 castaglia Exp $
+$Id: NEWS,v 1.710 2005-11-04 16:36:03 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -12,6 +12,7 @@ $Id: NEWS,v 1.709 2005-11-04 16:34:12 castaglia Exp $
 CVS
 --------------------------------
 - Bug 2703 - Disk quota exceeded for small files not being triggered.
+- Bug 2706 - utmp/wtmp logging on NetBSD needs some tweaks.
 
 1.3.0rc3 - Released 31-Oct-2005
 --------------------------------
